Experiment with changing precision (for example:, using float32, float16, or mixed-precision training if supported) Observe how precision changes affect training speed and image generation quality

--- a/Precision_Changes.ipynb
+++ b/Precision_Changes.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMj+yAYkVMljZCN05oj5GPa",
+      "authorship_tag": "ABX9TyPAL6OmeqX1D8FBIO7+yjRa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -248,35 +248,43 @@
         "\n",
         "# Define the generator model\n",
         "def make_generator_model():\n",
+        "    \"\"\"\n",
+        "    Create a generator model that generates images from random noise.\n",
+        "\n",
+        "    Returns:\n",
+        "        tf.keras.Model: Generator model.\n",
+        "    \"\"\"\n",
         "    model = tf.keras.Sequential()\n",
         "    model.add(layers.Dense(7 * 7 * 256, use_bias=False, input_shape=(100,)))\n",
         "    model.add(layers.BatchNormalization())\n",
         "    model.add(layers.LeakyReLU())\n",
         "\n",
-        "    model.add(layers.Reshape((7, 7, 256)))\n",
-        "    #assert model.output_shape == (None, 7, 7, 256))\n",
+        "    model.add(layers.Reshape((7, 7, 256))\n",
         "\n",
         "    model.add(layers.Conv2DTranspose(128, (5, 5), strides=(1, 1), padding='same', use_bias=False))\n",
-        "    assert model.output_shape == (None, 7, 7, 128)\n",
         "    model.add(layers.BatchNormalization())\n",
         "    model.add(layers.LeakyReLU())\n",
         "\n",
         "    model.add(layers.Conv2DTranspose(64, (5, 5), strides=(2, 2), padding='same', use_bias=False))\n",
-        "    assert model.output_shape == (None, 14, 14, 64)\n",
         "    model.add(layers.BatchNormalization())\n",
         "    model.add(layers.LeakyReLU())\n",
         "\n",
         "    model.add(layers.Conv2DTranspose(1, (5, 5), strides=(2, 2), padding='same', use_bias=False, activation='tanh'))\n",
-        "    assert model.output_shape == (None, 28, 28, 1)\n",
         "\n",
         "    return model\n",
         "\n",
         "# Define the discriminator model\n",
         "def make_discriminator_model():\n",
+        "    \"\"\"\n",
+        "    Create a discriminator model to distinguish real from generated images.\n",
+        "\n",
+        "    Returns:\n",
+        "        tf.keras.Model: Discriminator model.\n",
+        "    \"\"\"\n",
         "    model = tf.keras.Sequential()\n",
         "    model.add(layers.Conv2D(64, (5, 5), strides=(2, 2), padding='same', input_shape=[28, 28, 1]))\n",
         "    model.add(layers.LeakyReLU())\n",
-        "    model.add(layers.Dropout(0.3))\n",
+        "    model.add(layers.Dropout(0.3)\n",
         "\n",
         "    model.add(layers.Conv2D(128, (5, 5), strides=(2, 2), padding='same'))\n",
         "    model.add(layers.LeakyReLU())\n",
@@ -291,19 +299,38 @@
         "cross_entropy = tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
         "\n",
         "def discriminator_loss(real_output, fake_output):\n",
+        "    \"\"\"\n",
+        "    Calculate the discriminator loss.\n",
+        "\n",
+        "    Args:\n",
+        "        real_output (tf.Tensor): Output of the discriminator for real images.\n",
+        "        fake_output (tf.Tensor): Output of the discriminator for generated images.\n",
+        "\n",
+        "    Returns:\n",
+        "        tf.Tensor: Discriminator loss.\n",
+        "    \"\"\"\n",
         "    real_loss = cross_entropy(tf.ones_like(real_output), real_output)\n",
         "    fake_loss = cross_entropy(tf.zeros_like(fake_output), fake_output)\n",
         "    total_loss = real_loss + fake_loss\n",
         "    return total_loss\n",
         "\n",
         "def generator_loss(fake_output):\n",
+        "    \"\"\"\n",
+        "    Calculate the generator loss.\n",
+        "\n",
+        "    Args:\n",
+        "        fake_output (tf.Tensor): Output of the discriminator for generated images.\n",
+        "\n",
+        "    Returns:\n",
+        "        tf.Tensor: Generator loss.\n",
+        "    \"\"\"\n",
         "    return cross_entropy(tf.ones_like(fake_output), fake_output)\n",
         "\n",
         "# Define the optimizers for generator and discriminator\n",
         "generator_optimizer = tf.keras.optimizers.Adam(1e-4)\n",
         "discriminator_optimizer = tf.keras.optimizers.Adam(1e-4)\n",
         "\n",
-        "# Define the while loop for training\n",
+        "# Define the training step\n",
         "@tf.function\n",
         "def train_step(images, generator):\n",
         "    noise = tf.random.normal([config.batch_size, 100])\n",
@@ -321,11 +348,18 @@
         "    gradients_of_discriminator = disc_tape.gradient(disc_loss, discriminator.trainable_variables)\n",
         "\n",
         "    generator_optimizer.apply_gradients(zip(gradients_of_generator, generator.trainable_variables))\n",
-        "    discriminator_optimizer.apply_gradients(zip(gradients_of_discriminator, discriminator.trainable_variables))\n",
+        "    discriminator_optimizer.apply_gradients(zip(gradients_of_discriminator, discriminator.trainable_variables)\n",
         "\n",
         "# Define a function to generate and save images\n",
         "def generate_and_save_images(model, epoch, test_input):\n",
-        "    # Generate images and save them\n",
+        "    \"\"\"\n",
+        "    Generate and save images using the generator model.\n",
+        "\n",
+        "    Args:\n",
+        "        model (tf.keras.Model): Generator model.\n",
+        "        epoch (int): Current training epoch.\n",
+        "        test_input (tf.Tensor): Random input for generating images.\n",
+        "    \"\"\"\n",
         "    predictions = model(test_input, training=False)\n",
         "    fig = plt.figure(figsize=(4, 4))\n",
         "\n",
@@ -339,6 +373,16 @@
         "\n",
         "# Main training loop\n",
         "def train(dataset, epochs, generator, discriminator, save_interval):\n",
+        "    \"\"\"\n",
+        "    Main training loop for the GAN.\n",
+        "\n",
+        "    Args:\n",
+        "        dataset (tf.data.Dataset): Input dataset.\n",
+        "        epochs (int): Number of training epochs.\n",
+        "        generator (tf.keras.Model): Generator model.\n",
+        "        discriminator (tf.keras.Model): Discriminator model.\n",
+        "        save_interval (int): Interval for saving generated images.\n",
+        "    \"\"\"\n",
         "    for epoch in range(epochs):\n",
         "        for image_batch in dataset:\n",
         "            train_step(image_batch, generator)\n",
@@ -346,7 +390,7 @@
         "            noise = tf.random.normal([16, 100])\n",
         "            generate_and_save_images(generator, epoch + 1, noise)\n",
         "\n",
-        " # Set the interval at which you want to save images (e.g., every 10 epochs)\n",
+        "# Set the interval at which you want to save images (e.g., every 10 epochs)\n",
         "save_interval = 10\n",
         "\n",
         "# Initialize Weights and Biases for experiment tracking\n",
@@ -366,7 +410,6 @@
         "# Create and compile the generator and discriminator models\n",
         "generator = make_generator_model()\n",
         "discriminator = make_discriminator_model()\n",
-        "\n",
         "\n",
         "# Train the GAN\n",
         "train(train_dataset, config.epochs, generator, discriminator, save_interval)"
